<resources>
    <string name="app_name">ea3</string>
    <string name="Select">Select</string>
    <string name="Upload">Upload</string>
    <string name="Download">Download</string>
    <string name="back">back</string>
    <string name="Height">Height(cm):</string>
    <string name="Weight">Weight(kg):</string>
    <string name="Enter">Enter</string>
    <string name="NewPassword">New Password</string>
    <string name="Username">Username</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ChangePassword">Change Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Home">Home</string>
    <string name="Map">Map</string>
    <string name="PostureCheck">Posture Check</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="WelcomeToGTS">Welcome To GTS</string>
    <string name="SelectRegion">Select Region</string>
    <string name="SelectArea">Select Area</string>
    <string name="Language">Language</string>
    <string name="About">About</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Logout">Logout</string>
    <string name="Password">Password</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="HaveNoAccount">Don\'t have an account? Sign Up</string>
    <string name="GTSAccount">GTS Account</string>
    <string name="Start">Start</string>
    <string name="Reset">Reset</string>
    <string name="SwitchMode">Switch Mode</string>
    <string name="History">History</string>
    <string name="HoldToReset">Hold To Reset</string>
    <string name="CaloriesBurned">Calories burned(kcal)</string>
    <string name="SetAStepGoal">Set a Step Goal</string>
    <string name="SetGoals">Set Goals</string>
    <string name="Save">Save</string>
    <string name="TodayWeather">Today Weather</string>
    <string name="TomorrowWeather">Tomorrow Weather</string>
    <string name="ThisWeek">This Week</string>
    <string name="Weather">Weather</string>
    <string name="Game">Game</string>
    <string name="KcalCalculator">Calories Calculator</string>
    <string name="BMICalculator">BMI Calculator</string>
    <string name="BMRCalculator">BMR Calculator</string>
    <string name="Timer">Timer</string>
    <string name="Setting">Setting</string>
    <string name="Step">Step Counter</string>
    <string name="ChangeLanguage">Switch Language</string>
</resources>