<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />

    <item
        android:id="@+id/nav_Weather"
        android:icon="@drawable/weather"
        android:title="@string/Weather" />
    <item
        android:id="@+id/nav_Game"
        android:icon="@drawable/game"
        android:title="@string/Game" />

    <item
        android:id="@+id/nav_kcal"
        android:icon="@drawable/cal"
        android:title="@string/KcalCalculator" />

    <item
        android:id="@+id/nav_BMI"
        android:icon="@drawable/cal"
        android:title="@string/BMICalculator" />


    <item
        android:id="@+id/nav_BMR"
        android:icon="@drawable/cal"
        android:title="@string/BMRCalculator" />

    <item
        android:id="@+id/nav_timer"
        android:icon="@drawable/timer"
        android:title="@string/Timer" />


    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/setting"
        android:title="@string/Setting" />