<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#C1FBA13F"
    tools:context=".SignInActivity">


    <!-- 上部圖像區域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/top1">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2" />
    </LinearLayout>

    <!-- 分隔線 -->
    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/Username"
            android:padding="16dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:padding="16dp"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/tvChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/ForgetPassword"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/HaveNoAccount"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>
</LinearLayout>
