<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ff9e3d"
    tools:context=".Step">

    <ImageView
        android:id="@+id/step_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/step_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>


    <RelativeLayout
        android:id="@+id/circle_background"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/circle_shape"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/step_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_step_count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/HoldToReset"
            android:textColor="#808080"
            android:textSize="20sp"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_label_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CaloriesBurned"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_show_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/et_step_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SetAStepGoal"
        android:inputType="number"
        android:background="@android:color/white"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_show_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_set_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/stepbutton_background"
        android:padding="10dp"
        android:text="@string/SetGoals"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_step_goal" />
    <Button
        android:id="@+id/btn_sava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/stepbutton_background"
        android:padding="10dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_goal" />
</androidx.constraintlayout.widget.ConstraintLayout>