<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9e3d">


    <!-- Profile Section -->

    <LinearLayout
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#ff9e3d"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <ImageView
                android:id="@+id/BackTo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/backTo"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:onClick="BackTo"/>
        </LinearLayout>


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <!-- Options Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:id="@+id/l1"
        app:layout_constraintTop_toBottomOf="@id/profile_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Language Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="onLanguageClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/Language"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChangeLanguage"
                android:onClick="onLanguageClick"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D8D8D8" />

        <!-- About Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="onAboutClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/About"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D8D8D8" />

        <!-- Contact Us Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="onContactClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ContactUs"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ContactUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Whatsapp: +85256129482"
                android:textColor="#0000ff"
                android:onClick="onContactUsClick"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D8D8D8" />

        <!-- Logout Option -->

    </LinearLayout>
    <TextView
        android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:gravity="center"
        android:padding="16dp"
        android:clickable="true"
        android:onClick="onLogoutClick"
        app:layout_constraintTop_toBottomOf="@+id/l1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>
    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        android:background="#979594"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>